# hr_analytics

./: .python-version  .python-version copy  README.md  app.py  dev.ipynb  pyproject.toml
dev/: fake_data.xlsx
pages/: 2_Demographics.py  3_Time off - Holiday.py  3_Tracking leaves.py  4_Time off - Sickness.py  99_Methodologie.py  Time off - Sickness
static/: nationalities_to_country.csv
